--- a/index.html
+++ b/index.html
@@ -1,60 +1,22 @@
 <!DOCTYPE html>
-<html lang="az">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Şəkil və Məlumat</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-            font-family: Arial, sans-serif;
-        }
-        .card {
-            position: relative;
-            width: 300px;
-            overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out;
-        }
-        .card:hover {
-            transform: scale(1.05);
-        }
-        .card img {
-            width: 100%;
-            height: auto;
-            display: block;
-            transition: opacity 0.3s ease-in-out;
-        }
-        .info {
-            position: absolute;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            width: 100%;
-            padding: 15px;
-            text-align: center;
-            opacity: 0;
-            transform: translateY(100%);
-            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-        }
-        .card:hover .info {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    </style>
+    <title>Toggle Bulb</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="card">
-        <img src="20240113_150241.jpg" alt="Təsviri şəkil">
-        <div class="info">
-            <h3>Tunarın Maşını</h3>
-            <p>Niva 2024 </p>
-        </div>
+    <div class="toggle-scene">
+        <svg width="100" height="200" viewBox="0 0 100 200">
+            <line class="toggle-scene__cord" x1="50" y1="0" x2="50" y2="80" stroke="gray" stroke-width="5"/>
+            <circle id="switch" cx="50" cy="80" r="5" fill="gray" />
+            <g id="bulb">
+                <circle cx="50" cy="120" r="20" stroke="black" stroke-width="2" fill="transparent"/>
+            </g>
+        </svg>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
